public class Reference
{
    private string _versesNumbers;
    private string _chapterNumber;
    private string _book;

    public Reference(string reference)
    {
        
    }

    public string GetReference()
    {
        return "";
    }
}